give surefire more memory when running all tests