@@ -998,6 +998,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled</argLine>
                             <includes>
                                 <include>**/*Test.java</include>
                                 <include>**/*TestIntegration.java</include>
